<resources>
    <string name="app_name">UWI Mona</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="player_error">There seems to be something wrong here</string>
        <string name="initialization_player_error">
            There was an error initializing the Youtube Player (%1$s)
        </string>
    <string name="title_activity_our_vle">OurVLE</string>
    <string name="title_activity_sas">SAS</string>
    <string name="sas">Student Administrative Services</string>
    <string name="to_sas_home"> Registered Courses</string>
    <string name="to_courseFragment_button">Courses</string>
    <string name="to_addDropFragment_button">Add/Drop Courses</string>
    <string name="to_timetableFragment_button">Timetable</string>
    <string name="to_classmapFragment_button">Class Map</string>
    <string name="to_transcriptFragment_button">Transcript</string>
    <string name="adddropFragment_title">Add/Drop</string>
    <string name="semester">Select a Semester</string>
    <string name="add_course"> Add Course</string>
    <string name="search_course">Search Courses</string>
    <string name="Cancel">CANCEL</string>
    <string name="Done">DONE</string>
    <string name="courseFragment_title">Courses</string>
    <string name="course_info">Course Information</string>
    <string name="noCourses">No Registered Courses</string>
    <string name="course_exist"> Registered Courses</string>
    <string name="timetableFragment_title">Timetable</string>
    <string name="daybyday_title">Day By Day Timetable</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="new_event"> New Calendar Event</string>
    <string name="new_class">New</string>
    <string name="classmapFragment_title">Class Map</string>
    <string name="transcriptFragment_title">Transcript</string>
    <string name="CourseInfoFragment">Course Information</string>
    <string name="RequestOverride">Request Override</string>
    <string name="requestOverride_title">Request Override</string>
    <string name="override_needed"> Needs Over-ride Approval</string>
    <string name="override_submitted"> Over-ride request submitted</string>
    <string name="request_ok">OK</string>
    <string name="request_submit">SUBMIT</string>
    <string name="request_cancel">CANCEL</string>
    <string name="noOverrides">The are currently no override requests in the system.</string>
    <string name="request_hint">Enter a message that will be sent to the lecturer, upon submitting this override.</string>
    <string name="admin_hold"> Administrative Holds</string>
    <string name="noHolds">There are currenlty no administrative holds on your account </string>
    <string-array name="semester_test">
        <item>  Semester 1 2014/2015</item>
        <item>  Semester 2 2014/2015</item>
        <item>  Summer 2014/2015</item>
        <item>  Semester 1 2015/2016</item>
        <item>  Semester 2 2015/2016</item>
        <item>  Summer 2015/2016</item>
        <item>  Semester 1 2016/2017</item>
        <item>  Semester 2 2016/2017</item>
        <item>  Summer 2016/2017</item>
    </string-array>
    <string-array name="department_test">
        <item>  Anasthetics Radiology</item>
        <item>  Basic Medical Science</item>
        <item>  Chemical Engineering</item>
        <item>  Computing</item>
        <item>  Community Health</item>
        <item>  Dentistry</item>
        <item>  Economics</item>
        <item>  Foundation Courses</item>
        <item>  Geography</item>
    </string-array>
    <string-array name="timetable_color_pref">
        <item name="1">@color/event_color_01</item>
        <item name="2">@color/event_color_02</item>
        <item name="3">@color/event_color_03</item>
        <item name="4">@color/event_color_04</item>
        <item name="5">@color/MediumPurple</item>
    </string-array>
    <string-array name="timetable_colors">
        <item name="1">Cool</item>
        <item name="2">Steam</item>
        <item name="3">Ever green</item>
        <item name="4">Radiant </item>
        <item name="5">Mellow</item>
    </string-array>
    <string name="activity_evals">Teaching Evaluations</string>
    <string name="title_activity_boss">BOSS</string>
    <string name="title_activity_frag">Frag</string>
    <string name="title_activity_bus_schedule">Transport</string>
    <string name="bus_search_hint">Search route</string>
    <string name="title_activity_directory">Directory</string>
    <string name="action_department">Department</string>
    <string name="action_names">Names</string>
    <string name="campus_info_action_bar_title">Campus Information</string>
    <string name="to_campus_life">Campus Life</string>
    <string name="to_faculties">Our Faculties</string>
    <string name="to_history">Our History</string>
    <string name="to_campus_housing">Campus Housing &amp; Accommodation</string>
    <string name="to_something_wdk_yet">Something We Don\'t Know Yet</string>
    <string name="to_campus_facilities">Campus Facilites</string>
    <string name="title_activity_campus_information">Campus Information</string>
    <string-array name="campus_info_snippet_body">
        <item>
            UWI Mona is a fully accredited tertiary-level institution.
            Our Programmes - available across our 5 faculties,
            8 schools and 12 specialist centres - have
            been closely examined and evaluated and we
            are proud of the \'flying colors\' we
            have continuously received
        </item>
        <item>
            We are the home of the Pelicans,
            our enduring symbol of the humble Caribbean
            bird that sits atop our coat of
            arms highlighting the attitude, and altitude of
            the distinctive UWI student.
        </item>
        <item>
            UWI is increasingly modeling eco friendly sustainable
            practices in its policy, operations and research.
        </item>
        <item>
            Within the region, the UWI Mona serves 16
            countries of the Commonwealth Caribbean\nThe UWI: One
            Institution, Four Campuses\nUWI Mona: One Campus,
            Two Locations\nKingston Campus, Mona | Western
            Jamaica Campus, Montego Bay
        </item>
        <item>
            Our Mission Statement reflects the primary purpose
            of our University, that is, the reason
            for its existence.To advance education and
            create knowledge through excellence in teaching, research,
            innovation, public service, intellectual leadership and outreach
            in order to support the inclusive (social,
            economic, political, cultural, environmental) development of the
            Caribbean region and beyond.
        </item>
        <item>
            By 2017, the University will be globally
            recognised as a regionally integrated, innovative, internationally
            competitive university, deeply rooted in all aspects of Caribbean
            development and committed to serving the diverse people of the region and beyond.
        </item>
    </string-array>
    <string-array name="campus_info_snippet_titles">
        <item>We are fully Accredited</item>
        <item>We are the home of the Pelicans</item>
        <item>We are a green, progressive campus</item>
        <item>Who we serve</item>
        <item>Mission Statement</item>
        <item>The UWI\'s Vision</item>
    </string-array>
    <string name="campus_info_heading">
        The University of the West Indies (UWI), Mona Campus offers world class, accredited higher
        education programmes to Jamaica, the region and the globe. We engage in research and
        development designed to support the social and economic growth of the Caribbean region, the
        provision of community service, and the enrichment of the academic experience.
    </string>
    <string name="campus_info_snippet_title1">We are fully Accredited</string>
    <string name="campus_info_snippet_title2">We are the home of the Pelicans</string>
    <string name="campus_info_snippet_title3">We are a green, progressive campus</string>
    <string name="campus_info_snippet_title4">Who we serve</string>
    <string name="campus_info_snippet_title5">Mission Statement</string>
    <string name="campus_info_snippet_title6">The UWI\'s Vision</string>
    <string name="title_activity_home">Home</string>
    <string-array name="navigation_menu_titles">
        
        
        <item>Teaching Evaluations</item>
        
        
        
        
        
        
        <item>Campus Information</item>
        
        <item>Campus Navigation</item>
    </string-array>
    <string-array name="FAB_menu_strings">
        <item>Student Administration System</item>
        
        <item>OurVLE</item>
        <item>Transportation</item>
        <item>Campus Information</item>
        <item>Eateries</item>
    </string-array>
    <string name="fst_name">Faculty of Science &amp; Technology</string>
    <string name="medsci_name">Faculty Of Medical Sciences</string>
    <string name="law_name">Faculty of Law</string>
    <string name="humed_name">Faculty of Humanities &amp; Education</string>
    <string name="socsci_name">Faculty of Social Sciences</string>
    <string name="sub_information_url_error">
        This faculty does not exist on this social media.
    </string>
    <string-array name="medsci_info" formatted="false">
        <item name="medsci_instagram">https://www.instagram.com/uwimedsci/</item>
        <item name="medsci_facebook"></item>
        <item name="medsci_twitter"></item>
        <item name="medsci_snippet">
            The medical faculty was the first to be established at the UWI Mona.
            It began as an overseas college of the University of London.
            Students at the time were required to complete one pre medical and
            two preclinical years before entering the three year hospital based
            programme.
        </item>
        <item>
            <![CDATA[http://www.mona.uwi.edu/fms/sites/default/files/fms/uploads/MBBS%20Student%20Handbook_Final.pdf]]>
        </item>
    </string-array>
    <string name="action_all">All</string>
    <string name="action_fast">Fast Food</string>
    <string name="action_caf">Cafeterias</string>
    <string name="action_stall">Stalls</string>
    <string name="action_res">Restaurants</string>
    <string name="action_deli">Delis</string>
    <string name="action_fav">Favourites</string>
    <string name="action_search">Search</string>
    <string name="field_login_username">Username</string>
    <string name="field_login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="ourvle_short">OurVLE</string>
    <string name="ourvle_long">Our Virtual Learning Environment</string>
    <string name="social_twitter">Twitter Page</string>
    <string name="social_facebook">Facebook</string>
    <string name="social_instagram">Instagram</string>
    <string name="social_snapchat">Snapchat</string>
</resources>