<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mits.uwi.com.ourmobileenvironment.Directory.DirectoryActivity">

    <item android:id="@+id/action_search"
        android:icon="@drawable/searchicon"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_all"
        android:title="@string/action_all"
        app:showAsAction="never" />

    <item android:id="@+id/action_names"
        android:title="@string/action_names"
        app:showAsAction="never" />

    <item android:id="@+id/action_department"
        android:title="@string/action_department"
       app:showAsAction="never" />
</menu>
