<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="mits.uwi.com.ourmobileenvironment.SASActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_transcript"
          android:title="@string/transcriptFragment_title"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_timetable"
        android:title="@string/timetableFragment_title"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_courseinfo"
        android:title="@string/course_info"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
