<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/campus_info_toolbar"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:background="@color/actionbar_background_eateries"
        android:title="@string/title_activity_campus_information"/>


    <com.bluejamesbond.text.DocumentView
        xmlns:ext="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/campus_info_toolbar"
        android:id="@+id/campus_information_heading"
        ext:documentView_antialias="true"
        ext:documentView_text="@string/campus_info_heading"
        ext:documentView_textAlignment="justified"
        ext:documentView_textSize="18sp"
        ext:documentView_insetPadding="10dip"
        />
    <FrameLayout
        android:layout_height="200dip"
        android:layout_width="match_parent"
        android:layout_below="@id/campus_information_heading"
        android:id="@+id/viewPagerFrame">
        <!--<android.support.v4.view.ViewPager-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="match_parent"-->
            <!--android:id="@+id/campus_info_viewpager"-->
            <!--android:background="#498AAA"/>-->

        <AdapterViewFlipper
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/campus_info_flipper"
            android:flipInterval="3000"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/viewPagerFrame"
        android:id="@+id/button_grid">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:id="@+id/to_campus_life"
            android:text="@string/to_campus_life"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/to_campus_life"
            android:layout_toEndOf="@id/to_campus_life"
            android:id="@+id/to_faculties"
            android:text="@string/to_faculties"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/to_campus_life"
            android:id="@+id/to_history"
            android:text="@string/to_history"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/to_campus_housing"
            android:layout_below="@id/to_faculties"
            android:text="@string/to_campus_housing" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/to_campus_life"
            android:id="@+id/to_campus_facilities"
            android:text="@string/to_campus_facilities"/>
    </RelativeLayout>

</RelativeLayout>