<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courseFragment_title"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:layout_weight="0.80">

        <!--android.support.v7.widget.RecyclerView
            android:id="@+id/course_list"
            android:scrollbars="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/-->


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_weight="0.26">

        <Button
            android:id="@+id/to_timetable_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_timetableFragment_button" />

        <Button
            android:id="@+id/to_transcriptFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_transcriptFragment_button"/>

        <Button
            android:id="@+id/to_addDropCourse_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_addDropFragment_button"/>
    </LinearLayout>

</LinearLayout>