<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:contentDescription="@string/social_twitter"
        android:id="@+id/twitterButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/twitter"
        android:scaleType="fitXY"
        android:layout_gravity="center"/>

    <ImageView
        android:contentDescription="@string/social_facebook"
        android:id="@+id/facebookButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/facebook"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        />

    <ImageView
        android:contentDescription="@string/social_instagram"
        android:id="@+id/instagramButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/instagram"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        />

    <ImageView
        android:contentDescription="@string/social_snapchat"
        android:id="@+id/snapchatButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/snapchat"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        />


</LinearLayout>