<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="50dp"
    android:gravity="center"
    android:background="@drawable/login_background">

    <LinearLayout
        android:id="@+id/loginBox"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/ourvle_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/ourvle_short"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/ourvle_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/ourvle_long"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>


            <EditText
                android:id="@+id/id_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/field_login_username"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:singleLine="true"
                android:text=""
                android:inputType="text" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/field_login_password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:text="" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background"
                android:alpha="0.69"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:text="@string/button_login" />

    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progress" />


</LinearLayout>