<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="10dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:lines="20"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="20"
        android:ems="10"
        android:scrollbars="vertical"
        android:id="@+id/request"
        android:hint="@string/request_hint"
        android:background="@android:color/transparent"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_cancel"
            android:id="@+id/request_cancel"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:clickable="true"
            android:onClick="onClick"
            android:gravity="bottom|right"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_submit"
            android:id="@+id/request_submit"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:clickable="true"
            android:onClick="onClick"
            android:gravity="bottom|right"
            android:layout_marginBottom="5dp" />
        </LinearLayout>

</RelativeLayout>