<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:weightSum="1">

    <!--cursor adapter needed-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Spinner
        android:id="@+id/semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </Spinner>
    </android.support.v7.widget.CardView>
    </LinearLayout>
    <!--cursor adapter needed-->


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/search_course"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/accent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.09"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:weightSum="1"
        android:gravity="left|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/addDrop_Cancel"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="40dp"
            android:padding="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:id="@+id/addDrop_done"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_marginRight="15dp"
            android:padding="20dp"/>

    </LinearLayout>


</LinearLayout>
